added links to clinic and swagger fixing
